--- a/apps/templates/system/snapshots/csi/external-snapshotter/crd.yaml
+++ b/apps/templates/system/snapshots/csi/external-snapshotter/crd.yaml
@@ -12,8 +12,8 @@ spec:
   source:
     path: client/config/crd
     repoURL: 'https://github.com/kubernetes-csi/external-snapshotter'
-    targetRevision: release-4.2
-  project: snapshots
+    targetRevision: release-5.0
+  project: system.snapshots
   syncPolicy:
     automated:
       prune: true
