--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -15,10 +15,7 @@ spec:
     helm:
       values: |
         csi:
-          snapshotter:
-            image:
-              repository: k8s.gcr.io/sig-storage/csi-snapshotter
-              tag: v5.0.0
+          snapshotter: ~
         secret:
           enabled: true
           create: true
@@ -33,7 +30,7 @@ spec:
               domain-name=Default
               region-name=GRA5
         storageClass:
-          enabled: true
+          enabled: false
           custom: |-
             apiVersion: snapshot.storage.k8s.io/v1
             kind: VolumeSnapshotClass
