--- a/apps/templates/system/snapshots/csi/external-snapshotter/controller.yaml
+++ b/apps/templates/system/snapshots/csi/external-snapshotter/controller.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: external-snapshotter-crd
+  name: snapshot-controller
   namespace: argocd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
@@ -10,8 +10,8 @@ spec:
     namespace: kube-system
     server: 'https://kubernetes.default.svc'
   source:
-    path: client/config/crd
-    repoURL: 'https://github.com/kubernetes-csi/external-snapshotter'
+    path: deploy/kubernetes/snapshot-controller
+    repoURL: 'https://github.com/constructions-incongrues/external-snapshotter'
     targetRevision: release-4.2
   project: system.snapshots
   syncPolicy:
