--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -15,7 +15,7 @@ spec:
     helm:
       values: |
         csi:
-          snapshotter: ~
+          snapshotter: {}
         secret:
           enabled: true
           create: true
