--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -41,7 +41,7 @@ spec:
               domain-name=Default
               region-name=GRA5
         storageClass:
-          enabled: false
+          enabled: true
           custom: |-
             apiVersion: snapshot.storage.k8s.io/v1
             kind: VolumeSnapshotClass
