--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -11,7 +11,8 @@ spec:
     namespace: kube-system
   project: system.snapshots
   source:
-    chart: openstack-cinder-csi
+  source:
+    path: charts/cinder-csi-plugin
     helm:
       values: |
         csi:
@@ -59,8 +60,8 @@ spec:
             deletionPolicy: Delete
             parameters:
               force-create: '1'
-    repoURL: https://kubernetes.github.io/cloud-provider-openstack
-    targetRevision: 2.0.0
+    repoURL: 'https://github.com/kubernetes/cloud-provider-openstack'
+    targetRevision: HEAD
   syncPolicy:
     automated:
       prune: true
