--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -28,6 +28,7 @@ spec:
           snapshotter:
             image:
               tag: v4.2.1
+        plugin:
           snapshotController:
             enabled: true
             image:
