--- a/apps/templates/system/snapshots/k10/k10.yaml
+++ b/apps/templates/system/snapshots/k10/k10.yaml
@@ -32,8 +32,8 @@ spec:
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
-    automated:
-      prune: true
-      selfHeal: false
+    # automated:
+    #   prune: true
+    #   selfHeal: false
     syncOptions:
       - CreateNamespace=true
