--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -48,6 +48,7 @@ spec:
         storageClass:
           enabled: true
           custom: |-
+            ---
             apiVersion: snapshot.storage.k8s.io/v1
             kind: VolumeSnapshotClass
             metadata:
@@ -60,6 +61,11 @@ spec:
             deletionPolicy: Delete
             parameters:
               force-create: '1'
+            ---
+            apiVersion: v1
+            kind: ServiceAccount
+            metadata:
+              name: snapshot-controller-sa
     repoURL: 'https://github.com/kubernetes/cloud-provider-openstack'
     targetRevision: v1.22.1
   syncPolicy:
