--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -64,6 +64,33 @@ spec:
             kind: ServiceAccount
             metadata:
               name: snapshot-controller-sa
+            ---
+            kind: RoleBinding
+            apiVersion: rbac.authorization.k8s.io/v1
+            metadata:
+              name: snapshot-controller-leaderelection
+              namespace: kube-system
+            subjects:
+              - kind: ServiceAccount
+                name: snapshot-controller-sa
+            roleRef:
+              kind: Role
+              name: snapshot-controller-leaderelection
+              apiGroup: rbac.authorization.k8s.io
+            ---
+            kind: ClusterRoleBinding
+            apiVersion: rbac.authorization.k8s.io/v1
+            metadata:
+              name: snapshot-controller-role
+            subjects:
+              - kind: ServiceAccount
+                name: snapshot-controller-sa
+                namespace: kube-system
+            roleRef:
+              kind: ClusterRole
+              name: snapshot-controller-runner
+              apiGroup: rbac.authorization.k8s.io
+
     repoURL: 'https://github.com/kubernetes/cloud-provider-openstack'
     targetRevision: v1.22.1
   syncPolicy:
