--- a/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
+++ b/apps/templates/system/snapshots/csi/openstack-cinder-csi.yaml
@@ -20,6 +20,7 @@ spec:
             image:
               tag: v3.3.0
           provisioner:
+            topology: "false"
             image:
               tag: v3.0.0
           resizer:
