--- a/apps/templates/system/snapshots/openstack/openstack-cloud-controller-manager.yaml
+++ b/apps/templates/system/snapshots/openstack/openstack-cloud-controller-manager.yaml
@@ -19,7 +19,7 @@ spec:
           - --cluster-name=Icekubes
         cloudconfig:
           global:
-            auth-url: https://auth.cloud.ovh.net/v3/
+            auth_url: https://auth.cloud.ovh.net/v3/
             username: user-xUukp5UXvZyp
             password: vGdHXCW49Rt8BrfaDWVSWkVaSKgCMAnz
           loadbalancer:
