--- a/src/apps/templates/system/backup/k10.yaml
+++ b/src/apps/templates/system/backup/k10.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: k10
-  namespace: argocd
+  namespace: argo-cd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
@@ -32,8 +32,8 @@ spec:
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
-    # automated:
-    #   prune: true
-    #   selfHeal: false
+    automated:
+      prune: true
+      selfHeal: false
     syncOptions:
       - CreateNamespace=true
