--- a/src/apps/templates/system/deliver/argo-cd.yaml
+++ b/src/apps/templates/system/deliver/argo-cd.yaml
@@ -2,14 +2,14 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: argo-cd
-  namespace: argocd
+  namespace: argo-cd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
 spec:
   destination:
     server: https://kubernetes.default.svc
-    namespace: argocd
-  project: system.cd
+    namespace: argo-cd
+  project: system.deliver
   source:
     path: charts/argo-cd
     repoURL: https://github.com/constructions-incongrues/club.jeancloude.k8s.git
