--- a/src/apps/templates/system/expose/argocd-project.yaml
+++ b/src/apps/templates/system/expose/argocd-project.yaml
@@ -3,7 +3,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
   name: system.expose
-  namespace: argocd
+  namespace: argo-cd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
     - resources-finalizer.argocd.argoproj.io
