--- a/src/charts/argo-cd/values.yaml
+++ b/src/charts/argo-cd/values.yaml
@@ -1,8 +1,5 @@
 argo-cd:
   installCRDs: false
-  global:
-    image:
-      tag: v2.2.0-rc1
   dex:
     enabled: false
   server:
@@ -18,5 +15,7 @@ argo-cd:
           url: https://argoproj.github.io/argo-helm
     ingress:
       enabled: true
+      annotations:
+        external-dns.alpha.kubernetes.io/hostname: argo-cd.jeancloude.club
       hosts:
-        - argocd.jeancloude.club
+        - argo-cd.jeancloude.club
