--- a/src/apps/templates/system/deliver/argo-cd.yaml
+++ b/src/apps/templates/system/deliver/argo-cd.yaml
@@ -11,7 +11,7 @@ spec:
     namespace: argo-cd
   project: system.deliver
   source:
-    path: charts/argo-cd
+    path: src/charts/argo-cd
     repoURL: https://github.com/constructions-incongrues/club.jeancloude.k8s.git
     targetRevision: HEAD
   syncPolicy:
