--- a/src/apps/templates/system/backup/k10.yaml
+++ b/src/apps/templates/system/backup/k10.yaml
@@ -26,6 +26,7 @@ spec:
         cluster:
           domainName: jeancloude.club
         ingress:
+          class: traefik-internal
           create: true
           annotations:
             external-dns.alpha.kubernetes.io/hostname: k10.jeancloude.club
