--- a/src/apps/templates/system/backup/k10.yaml
+++ b/src/apps/templates/system/backup/k10.yaml
@@ -26,8 +26,7 @@ spec:
         cluster:
           domainName: jeancloude.club
         ingress:
-          class: traefik-internal
-          create: true
+          create: false
           annotations:
             external-dns.alpha.kubernetes.io/hostname: k10.jeancloude.club
     repoURL: https://charts.kasten.io/
