--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: net.pastis-hosting.icekubes
+  namespace: kasten-io
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
