--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
@@ -3,6 +3,11 @@ kind: Secret
 metadata:
   name: net.pastis-hosting.icekubes
   namespace: kasten-io
+  labels:
+    app: k10
+    app.kubernetes.io/instance: k10
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/name: k10
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
