--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/profile.yml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/profile.yml
@@ -5,9 +5,7 @@ metadata:
   namespace: kasten-io
   labels:
     app: k10
-    app.kubernetes.io/instance: k10
-    app.kubernetes.io/managed-by: Helm
-    app.kubernetes.io/name: k10
+    argocd.argoproj.io/instance: k10
 spec:
   infra:
     credential:
