--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: net.pastis-hosting.icekubes
+  name: net-pastis-hosting-icekubes
   namespace: kasten-io
   finalizers:
   - resources-finalizer.argocd.argoproj.io
