(argo-cd) server configuration

--- a/src/charts/argo-cd/values.yaml
+++ b/src/charts/argo-cd/values.yaml
@@ -13,6 +13,8 @@ argo-cd:
         - type: helm
           name: argo-cd
           url: https://argoproj.github.io/argo-helm
+      url: https://jeancloude.club
+      resourceTrackingMethod: annotation+label
     ingress:
       enabled: true
       annotations:
