--- a/src/charts/argo-cd/values.yaml
+++ b/src/charts/argo-cd/values.yaml
@@ -13,7 +13,7 @@ argo-cd:
         - type: helm
           name: argo-cd
           url: https://argoproj.github.io/argo-helm
-      url: https://jeancloude.club
+      url: https://argo-cd.jeancloude.club
       resourceTrackingMethod: annotation+label
     ingress:
       enabled: true
