--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
@@ -3,8 +3,8 @@ kind: Secret
 metadata:
   name: net-pastis-hosting-icekubes
   namespace: kasten-io
-  annotations:
-    argocd.argoproj.io/tracking-id: k10:Secret:kasten-io/net-pastis-hosting-icekubes
+  labels:
+    app.kubernetes.io/instance: k10
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
