--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/profile.yml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/profile.yml
@@ -4,7 +4,7 @@ metadata:
   name: net-pastis-hosting-icekubes
   namespace: kasten-io
   labels:
-    app.kubernetes.io/instance: k10
+    argocd.argoproj.io/instance: k10
 spec:
   infra:
     credential:
