--- a/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
+++ b/src/apps/templates/system/backup/k10/infra/net.pastis-hosting.icekubes/secret.yaml
@@ -4,7 +4,7 @@ metadata:
   name: net-pastis-hosting-icekubes
   namespace: kasten-io
   labels:
-    app.kubernetes.io/instance: k10
+    argocd.argoproj.io/instance: k10
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
