--- a/src/charts/argo-cd/values.yaml
+++ b/src/charts/argo-cd/values.yaml
@@ -20,3 +20,11 @@ argo-cd:
         external-dns.alpha.kubernetes.io/hostname: argo-cd.jeancloude.club
       hosts:
         - argo-cd.jeancloude.club
+      configManagementPlugins: |
+        - name: kustomized-helm
+          init:
+            command: ["/bin/sh", "-c"]
+            args: ["helm dependency build || true"]
+          generate:
+            command: ["/bin/sh", "-c"]
+            args: ["echo \"$HELM_VALUES\" | helm template . --name-template $ARGOCD_APP_NAME --namespace $ARGOCD_APP_NAMESPACE $HELM_ARGS -f - --include-crds > all.yaml && kustomize build"]
