--- a/src/apps/templates/system/vault/vault.yaml
+++ b/src/apps/templates/system/vault/vault.yaml
@@ -19,7 +19,8 @@ spec:
           ingress:
             enabled: true
             hosts:
-              - vault.jeancloude.club
+              - host: vault.jeancloude.club
+                paths: ['/']
             annotations:
               external-dns.alpha.kubernetes.io/hostname: vault.jeancloude.club
         injector:
