--- a/src/apps/templates/system/protect/k10/k10.yaml
+++ b/src/apps/templates/system/protect/k10/k10.yaml
@@ -9,7 +9,7 @@ spec:
   destination:
     server: https://kubernetes.default.svc
     namespace: kasten-io
-  project: system.backup
+  project: system.protect
   source:
     chart: k10
     helm:
