--- a/src/apps/templates/system/protect/project.yaml
+++ b/src/apps/templates/system/protect/project.yaml
@@ -2,7 +2,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: AppProject
 metadata:
-  name: system.backup
+  name: system.protect
   namespace: argo-cd
   # Finalizer that ensures that project is not deleted until it is not referenced by any application
   finalizers:
