--- a/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
@@ -22,6 +22,8 @@ spec:
           hostname: cartemembre.jeancloude.club
           annotations:
             external-dns.alpha.kubernetes.io/hostname: cartemembre.jeancloude.club
+        containerSecurityContext:
+          enabled: false
     repoURL: https://charts.bitnami.com/bitnami
     targetRevision: 5.2.8
   syncPolicy:
