--- a/src/apps/templates/system/protect/k10/k10.yaml
+++ b/src/apps/templates/system/protect/k10/k10.yaml
@@ -14,6 +14,8 @@ spec:
     chart: k10
     helm:
       values: |
+        global:
+          imagePullSecret: ~
         auth:
           basicAuth:
             enabled: true
@@ -29,6 +31,10 @@ spec:
           create: false
           annotations:
             external-dns.alpha.kubernetes.io/hostname: k10.jeancloude.club
+        prometheus:
+          server:
+            persistentVolume:
+              enabled: false
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
