--- a/src/apps/templates/system/protect/k10/k10.yaml
+++ b/src/apps/templates/system/protect/k10/k10.yaml
@@ -15,7 +15,8 @@ spec:
     helm:
       values: |
         global:
-          imagePullSecret: ~
+          imagePullSecret: 
+            name: ""
         auth:
           basicAuth:
             enabled: true
