--- a/src/apps/templates/system/protect/application/cluster/icekubes/secret/de.yaml
+++ b/src/apps/templates/system/protect/application/cluster/icekubes/secret/de.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k10secret-icekubes-de
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: k10
+    argocd.argoproj.io/instance: kasten
 data:
   aws_access_key_id: ZGEzYWRmYzNjMWJiNGJmMTg4MGJkNDRmMTIyOTZkNDg=
   aws_secret_access_key: NmU2OGQ4Y2IyYWY4NGEzZjhiNTU4NDRkNmUzZjE1NWI=
