--- a/src/apps/templates/system/protect/application/cluster/icekubes/infrastructure/openstack.yml
+++ b/src/apps/templates/system/protect/application/cluster/icekubes/infrastructure/openstack.yml
@@ -4,7 +4,7 @@ metadata:
   name: k10infrastructureprofile-icekubes-openstack
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: k10
+    argocd.argoproj.io/instance: kasten
 spec:
   infra:
     credential:
