--- a/src/apps/templates/system/protect/application/cluster/icekubes/location/de.yaml
+++ b/src/apps/templates/system/protect/application/cluster/icekubes/location/de.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k10locationprofile-icekubes-de
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: k10
+    argocd.argoproj.io/instance: kasten
 spec:
   locationSpec:
     credential:
