--- a/src/apps/templates/system/protect/application/cluster/icekubes/secret/openstack.yaml
+++ b/src/apps/templates/system/protect/application/cluster/icekubes/secret/openstack.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k10secret-icekubes-openstack
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: k10
+    argocd.argoproj.io/instance: kasten
 data:
   os_domain: RGVmYXVsdA==
   os_password: dkdkSFhDVzQ5UnQ4QnJmYURXVlNXa1ZhU0tnQ01Bbno=
