--- a/src/apps/templates/system/protect/application/kasten.yaml
+++ b/src/apps/templates/system/protect/application/kasten.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: k10
+  name: kasten
   namespace: argo-cd
   finalizers:
   - resources-finalizer.argocd.argoproj.io
