--- a/src/apps/templates/system/protect/application/policy/disaster-recovery.yaml
+++ b/src/apps/templates/system/protect/application/policy/disaster-recovery.yaml
@@ -4,7 +4,7 @@ metadata:
   name: k10-disaster-recovery-policy
   namespace: kasten-io
   labels:
-    argocd.argoproj.io/instance: k10
+    argocd.argoproj.io/instance: kasten
   actions:
     - action: backup
       backupParameters:
