--- a/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
@@ -17,6 +17,8 @@ spec:
         proxyAddressForwarding: true
         postgresql:
           postgresqlPassword: keycloak
+          persistence:
+            size: 1Gi
           volumePermissions:
             enabled: true
           primary:
