--- a/src/apps/templates/jeancloude.club/club/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/club/nextcloud.yaml
@@ -132,6 +132,9 @@ spec:
           annotations:
             external-dns.alpha.kubernetes.io/hostname: club.jeancloude.club
 
+        extraSecurityContext:
+          runAsNonRoot: false
+          readOnlyRootFilesystem: false
     repoURL: https://nextcloud.github.io/helm
     targetRevision: 2.11.3
   syncPolicy:
