--- a/src/apps/templates/system/vault/vault.yaml
+++ b/src/apps/templates/system/vault/vault.yaml
@@ -18,7 +18,7 @@ spec:
           enabled: true
           dataStorage:
             enabled: true
-            path: /mnt/vault/data
+            mountPath: /mnt/vault/data
           ingress:
             enabled: true
             hosts:
