--- a/src/apps/templates/system/vault/vault.yaml
+++ b/src/apps/templates/system/vault/vault.yaml
@@ -14,11 +14,23 @@ spec:
     chart: vault
     helm:
       values: |
-        dataStorage:
-          enabled: true
-          mountPath: /mnt/vault/data
         server:
           enabled: true
+          dataStorage:
+            enabled: true
+            mountPath: /mnt/vault/data
+          standalone:
+            enabled: "true"
+            config: |
+              ui = true
+              listener "tcp" {
+                tls_disable = 1
+                address = "[::]:8200"
+                cluster_address = "[::]:8201"
+              }
+              storage "file" {
+                path = "/vault/data"
+              }
           ingress:
             enabled: true
             hosts:
