--- a/src/apps/templates/system/vault/vault.yaml
+++ b/src/apps/templates/system/vault/vault.yaml
@@ -16,9 +16,6 @@ spec:
       values: |
         server:
           enabled: true
-          dataStorage:
-            enabled: true
-            mountPath: /mnt/vault/data
           standalone:
             enabled: "true"
             config: |
@@ -29,7 +26,7 @@ spec:
                 cluster_address = "[::]:8201"
               }
               storage "file" {
-                path = "/mnt/vault/data"
+                path = "/vault/data"
               }
           ingress:
             enabled: true
