--- a/src/apps/templates/jeancloude.club/club/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/club/nextcloud.yaml
@@ -27,6 +27,8 @@ spec:
           primary:
             persistence:
               enabled: true
+            accessModes:
+              - ReadWriteMany
           volumePermissions:
             enabled: true
         nginx:
