--- a/src/apps/templates/jeancloude.club/club/nextcloud.yaml
+++ b/src/apps/templates/jeancloude.club/club/nextcloud.yaml
@@ -24,8 +24,9 @@ spec:
         mariadb:
           enabled: true
           architecture: standalone
-          persistence:
-            enabled: true
+          primary:
+            persistence:
+              enabled: true
           accessModes:
             - ReadWriteMany
           volumePermissions:
