--- a/src/apps/templates/system/protect/kasten/cluster/icekubes/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten/cluster/icekubes/kasten.yaml
@@ -41,7 +41,7 @@ spec:
         persistence:
           enabled: false
         injectKanisterSidecar:
-          enabled: false
+          enabled: true
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy:
