--- a/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
+++ b/src/apps/templates/jeancloude.club/cartemembre/keycloak.yaml
@@ -17,10 +17,9 @@ spec:
         proxyAddressForwarding: true
         postgresql:
           postgresqlPassword: keycloak
+          postgresqlPostgresPassword: postgres
           persistence:
             size: 1Gi
-            accessModes:
-              - ReadWriteMany
           volumePermissions:
             enabled: true
         service:
