--- a/src/apps/templates/system/protect/namespace.yaml
+++ b/src/apps/templates/system/protect/namespace.yaml
@@ -6,3 +6,4 @@ metadata:
     k10.kasten.io/forcegenericbackup: 'true'
   labels:
     argocd.argoproj.io/instance: kasten
+    k10/injectKanisterSidecar: 'true'
