--- a/src/apps/templates/system/protect/kasten/cluster/icekubes/kasten.yaml
+++ b/src/apps/templates/system/protect/kasten/cluster/icekubes/kasten.yaml
@@ -43,7 +43,8 @@ spec:
         injectKanisterSidecar:
           enabled: true
           namespaceSelector:
-            matchLabels: 'k10/injectKanisterSidecar'
+            matchLabels:
+              k10/injectKanisterSidecar: 'true'
     repoURL: https://charts.kasten.io/
     targetRevision: 4.5.6
   syncPolicy: {}
